@@ -24,6 +24,7 @@
 	all : fixed haxe.rtti.Generic on interfaces
 	php : fixed issue with Reflect.callMethod
 	php : fixed issue with PHP reserved word used in callbacks
+	all : bugfix with non-constant enums in switches
 
 2009-07-26: 2.04
 	flash9 : fixed get_full_path error with -D fdb
